add neighboring island hint

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>map</title>
+	<meta name="description" content="RO仙境傳說霧林副本地圖(svg向量圖)">
+	<title>霧林地圖</title>
 </head>
 <body style="background-color:#333;text-align:center;margin:0px">
 <img src="mist.svg">
